[package]
name = "grpc-proxy-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
prost = "0.11.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.0"
tonic-reflect-protobuf = "0.9.0"
tonic-reflection = "0.9.0"

[build-dependencies]
failure             = "^0.1"
tonic-build         = "0.9.0"
